[gd_scene load_steps=2 format=3 uid="uid://gj1adculurwf"]

[ext_resource type="Script" uid="uid://boohcc358wx0x" path="res://main_menu.gd" id="1_06t4h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.358507
anchor_right = 0.643229
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="GameTitle" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.05

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 13
size_flags_vertical = 15
text = "Start Game"

[node name="LoadGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 13
size_flags_vertical = 15
text = "Load Game"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 13
size_flags_vertical = 15
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 13
size_flags_vertical = 15
text = "Back to Desktop"

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 13
size_flags_vertical = 15
size_flags_stretch_ratio = 1.82

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
